; ModuleID = '/home/carl/AnghaBench/darwin-xnu/pexpert/i386/extr_pe_serial.c_serial_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/pexpert/i386/extr_pe_serial.c_serial_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 (...)* }

@.str = private unnamed_addr constant [11 x i8] c"serialbaud\00", align 1
@LEGACY_UART_CLOCK = common dso_local global i32 0, align 4
@uart_baud_rate = common dso_local global i32 0, align 4
@mmio_uart_serial_functions = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@gPESF = common dso_local global %struct.TYPE_5__* null, align 8
@lpss_uart_supported = common dso_local global i32 0, align 4
@lpss_uart_enabled = common dso_local global i32 0, align 4
@legacy_uart_serial_functions = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@legacy_uart_enabled = common dso_local global i32 0, align 4
@pcie_mmio_uart_serial_functions = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@pcie_uart_enabled = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @serial_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  %3 = call i64 @PE_parse_boot_argn(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32* %2, i32 4)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %14

5:                                                ; preds = %0
  %6 = load i32, i32* @LEGACY_UART_CLOCK, align 4
  %7 = sdiv i32 %6, 16
  %8 = load i32, i32* %2, align 4
  %9 = urem i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %13, label %11

11:                                               ; preds = %5
  %12 = load i32, i32* %2, align 4
  store i32 %12, i32* @uart_baud_rate, align 4
  br label %13

13:                                               ; preds = %11, %5
  br label %14

14:                                               ; preds = %13, %0
  %15 = call i64 (...) @mmio_uart_probe()
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %14
  store %struct.TYPE_5__* @mmio_uart_serial_functions, %struct.TYPE_5__** @gPESF, align 8
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** @gPESF, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load i32 (...)*, i32 (...)** %19, align 8
  %21 = call i32 (...) %20()
  store i32 1, i32* @lpss_uart_supported, align 4
  store i32 1, i32* @lpss_uart_enabled, align 4
  store i32 1, i32* %1, align 4
  br label %39

22:                                               ; preds = %14
  %23 = call i64 (...) @legacy_uart_probe()
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %22
  store %struct.TYPE_5__* @legacy_uart_serial_functions, %struct.TYPE_5__** @gPESF, align 8
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** @gPESF, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load i32 (...)*, i32 (...)** %27, align 8
  %29 = call i32 (...) %28()
  store i32 1, i32* @legacy_uart_enabled, align 4
  store i32 1, i32* %1, align 4
  br label %39

30:                                               ; preds = %22
  %31 = call i64 (...) @pcie_mmio_uart_probe()
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %30
  store %struct.TYPE_5__* @pcie_mmio_uart_serial_functions, %struct.TYPE_5__** @gPESF, align 8
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** @gPESF, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 0
  %36 = load i32 (...)*, i32 (...)** %35, align 8
  %37 = call i32 (...) %36()
  store i32 1, i32* @pcie_uart_enabled, align 4
  store i32 1, i32* %1, align 4
  br label %39

38:                                               ; preds = %30
  store i32 0, i32* %1, align 4
  br label %39

39:                                               ; preds = %38, %33, %25, %17
  %40 = load i32, i32* %1, align 4
  ret i32 %40
}

declare dso_local i64 @PE_parse_boot_argn(i8*, i32*, i32) #1

declare dso_local i64 @mmio_uart_probe(...) #1

declare dso_local i64 @legacy_uart_probe(...) #1

declare dso_local i64 @pcie_mmio_uart_probe(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
